# webstore_sleuth

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
webstore_sleuth/: main.py  product_schema_extractor.py  product_schema_normalizer.py  schema_org_extractor.py  schemas.py  scraper.py
webstore_sleuth/storage/key_value_stores/default/: __CRAWLER_STATISTICS_0  __CRAWLER_STATISTICS_0.__metadata__.json  __RQ_STATE_PRaNuKb2bMVOE0c0I  __RQ_STATE_PRaNuKb2bMVOE0c0I.__metadata__.json  __metadata__.json
webstore_sleuth/storage/request_queues/default/: 02518bdea82f4c3.json  03b118528cce649.json  050e3f7741b57e7.json  062a457606ac43a.json  0be30330e256283.json  1317b409d544f26.json  1b0550b3db4debe.json  (+79 more)
webstore_sleuth/utils/: converters.py
webstore_sleuth/webstore_sleuth_crawlee/: crawler.py  impl.py  router.py  test_crawlee.py
webstore_sleuth/webstore_sleuth_scrapy/: impl.py  middlewares.py  settings.py
webstore_sleuth/webstore_sleuth_scrapy/spiders/: universal_product_spider.py
webstore_sleuth_python/: .env.sample  docker-compose.yml
webstore_sleuth_python/webstore_sleuth/: main.py  product_schema_extractor.py  product_schema_normalizer.py  schemas.py  scrapy.cfg  test_extruct.py
webstore_sleuth_python/webstore_sleuth/debug/: www.amazon.de_1.html  www.amazon.de_2.html
webstore_sleuth_python/webstore_sleuth/utils/: converters.py
webstore_sleuth_python/webstore_sleuth/webstore_sleuth_scrapy/: impl.py  middlewares.py  settings.py
webstore_sleuth_scrapoxy/: .env.sample  docker-compose.yml
(+9 files in other folders)
