[tool.poetry]
name = "webstore_sleuth"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.12.5"
scrapy = "^2.13.4"
extruct = "^0.18.0"
scrapy-impersonate = "^1.6.1"
scrapoxy = "^2.1.1"
python-dateutil = "^2.9.0.post0"
crawlee = {extras = ["playwright"], version = "^1.2.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"